Remove old compile options needed by lombok as long fixed.